# max_arm64

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  docker_cmake_build.sh  test.tga
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  makefile.yml  portmasterpr.yml
assets/: controls.xcf  cover.xcf
launcher/: audio.lua  config.lua  input.lua  main.lua  msf_parser.lua  ui.lua
overwrite/data/menu/: menu.txt
patch/data/menu/: menu.txt
patch/data/menu/bitmaps/: Menu_bg_Controls.tga
port/: Max Payne.sh  port.json
port/md/: compile.md  controls.md  description.md  instructions.md
port/tools/: patchscript
port/txt/: description.txt  instructions.txt
scripts/: Max Payne.sh  build_and_upload.sh  build_with_docker.sh  check_glibc_version.sh  generate_port_json.sh  generate_port_readme.sh  generate_version_string.sh  port.json
src/: config.c  config.h  error.c  error.h  gamedata_mapping.c  gamedata_mapping.h  hashmap.h  hooks.h  imports.c  imports.h  main.c  so_util.c  so_util.h  util.c  util.h  videoplayer.c  videoplayer.h  zipfs.c  zipfs.h
src/hooks/: game.c  openal.c  opengl.c
src/wrappers/: drm_wrapper.c  drm_wrapper.h  gbm_wrapper.c  gbm_wrapper.h
